# ctf-rankings-api

./: Cargo.toml  README.md
src/: main.rs
