[package]
name = "ctf-rankings-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
redis = { version = "0.23.0", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
tide = "0.16.0"
tokio = { version = "1.27.0", features = ["macros", "signal"] }
toml = { version = "0.7.3", features = ["parse"] }
