[package]
name = "ctf-rankings-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
redis = { version = "0.23.0", features = ["json"] }
serde = { version = "1.0.160", features = ["derive"] }
tide = "0.16.0"
toml = { version = "0.7.3", features = ["parse"] }
